src/test/resources/testData/foo/language/annotators/functions/invalidArgumentStringButExpectedClass_expected.Camel
${bodyAs(<error descr="Expected type: Class">"hello"</error>)}